FEAT: Cors and docs
